github_data_collector/src/data/issue_comment/shadowsocks_libQtShadowsocks.txt
请问能不能帮忙编译一个win下32位的版本
麻烦发我qq邮箱:476441619@qq.com
F:\shadowsocks-libqss-v2.0.2-win64>shadowsocks.bat
2019-11-24 9:55:04.647 ERROR: Failed to parse configuration file: "unterminated object"
2019-11-24 9:55:04.652 ERROR: The profile is invalid. Improper setup?
为什么会这样，我把机器本身的SS关了也会
树莓派在`cmake .. -DCMAKE_INSTALL_PREFIX=/usr`命令时出错，如下
```
$ cmake .. -DCMAKE_INSTALL_PREFIX=/usr
-- Checking for one of the modules 'botan-2>=2.3.0;botan-1.10'
CMake Error at /usr/share/cmake-3.13/Modules/FindPkgConfig.cmake:679 (message):
  None of the required 'botan-2>=2.3.0;botan-1.10' found
Call Stack (most recent call first):
  CMakeLists.txt:30 (pkg_search_module)


CMake Deprecation Warning at CMakeLists.txt:35 (message):
  Botan-1.10 is found and will be used in this build.  However, Botan-1.10 is
  deprecated and should not be used if possible


CMake Error: The following variables are used in this project, but they are set to NOTFOUND.
Please set them or make sure they are set and tested correctly in the CMake files:
BOTAN_LIBRARY_VAR
    linked by target "QtShadowsocks" in directory /home/pi/Downloads/libQtShadowsocks/lib

-- Configuring incomplete, errors occurred!
See also "/home/pi/Downloads/libQtShadowsocks/build/CMakeFiles/CMakeOutput.log".
```

而`botan`已经安装, 执行指令`botan version`结果如下
```
$ botan version
2.9.0
```
![image](https://user-images.githubusercontent.com/13401865/66518539-0e1c7800-eb18-11e9-9443-6f2073b2532f.png)

![image](https://user-images.githubusercontent.com/13401865/66518242-5b4c1a00-eb17-11e9-8bda-b61d9151a601.png)

my botan version is 2.13 and qt is 5.6

please take care about it,thanks a lot!
when I try to build, i fond this error. who can help me? help.

C:/msys64/home/Administrator/libQtShadowsocks-2.0.0/lib/cipher.cpp:212:42:   required from here
C:/msys64/mingw64/include/c++/9.2.0/bits/unique_ptr.h:79:16: error: invalid application of 'sizeof' to incomplete type 'Botan::Keyed_Filter'
   79 |  static_assert(sizeof(_Tp)>0,
      |                ^~~~~~~~~~~
[ 31%] Building CXX object lib/CMakeFiles/QtShadowsocks.dir/rc4.cpp.obj
make[2]: *** [lib/CMakeFiles/QtShadowsocks.dir/build.make:115：lib/CMakeFiles/QtShadowsocks.dir/cipher.cpp.obj] 错误 1
make[2]: *** 正在等待未完成的任务....
make[1]: *** [CMakeFiles/Makefile2:101：lib/CMakeFiles/QtShadowsocks.dir/all] 错误 2
make: *** [Makefile:130：all] 错误 2

windows版本程序用作服务器端，如果连接的客户端超过3个，大概10天左右会出现提示"当前程序已经使用了Windows管理器对象的系统允许的所有句柄"
Some functions were moved into "botan/filters.h" header since Botan2 Version 2.11.
能不能给编译一下啊，编译win程序太麻烦了
Hi,

I tried to build libqtshadowsocks on Mageia Cauldron against Botan 2.11.0 but it fails to build due to:

> /home/iurt/rpmbuild/BUILD/libQtShadowsocks-2.1.0/lib/crypto/cipher.cpp: In constructor 'QSS::Cipher::Cipher(const string&, std::__cxx11::string, std::__cxx11::string, bool)':
/home/iurt/rpmbuild/BUILD/libQtShadowsocks-2.1.0/lib/crypto/cipher.cpp:94:25: error: 'get_cipher' is not a member of 'Botan'
         filter = Botan::get_cipher(cipherInfo.internalName, _key, _iv,
                         ^~~~~~~~~~

Attached full log:

[build.0.20190715095032.log](https://github.com/shadowsocks/libQtShadowsocks/files/3391907/build.0.20190715095032.log)

**Platform:** Ubuntu18.04 on arm64

The former instructions of the building procedure is **OKAY** for me:
```
$ mkdir build && cd build
$ cmake .. -DCMAKE_INSTALL_PREFIX=/usr
```
But then when I use `make -j4`, problems occured as followed:
>/home/tpp/Downloads/libQtShadowsocks-2.1.0/lib/crypto/cipher.cpp: In member function ‘std::__cxx11::string QSS::Cipher::update(const uint8_t*, size_t)’:
/home/tpp/Downloads/libQtShadowsocks-2.1.0/lib/crypto/cipher.cpp:156:83: error: invalid cast from type ‘std::vector<unsigned char, Botan::secure_allocator<unsigned char> >::iterator {aka __gnu_cxx::__normal_iterator<unsigned char*, std::vector<unsigned char, Botan::secure_allocator<unsigned char> > >}’ to type ‘const char*’
         return std::string(reinterpret_cast<const char *>(DataOfSecureByteArray(c)),
                                                                                   ^
/home/tpp/Downloads/libQtShadowsocks-2.1.0/lib/crypto/cipher.cpp: In static member function ‘static std::__cxx11::string QSS::Cipher::randomIv(int)’:
/home/tpp/Downloads/libQtShadowsocks-2.1.0/lib/crypto/cipher.cpp:179:81: error: invalid cast from type ‘std::vector<unsigned char, Botan::secure_allocator<unsigned char> >::iterator {aka __gnu_cxx::__normal_iterator<unsigned char*, std::vector<unsigned char, Botan::secure_allocator<unsigned char> > >}’ to type ‘const char*’
     return std::string(reinterpret_cast<const char *>(DataOfSecureByteArray(out)), out.size());
                                                                                 ^
/home/tpp/Downloads/libQtShadowsocks-2.1.0/lib/crypto/cipher.cpp: In static member function ‘static std::__cxx11::string QSS::Cipher::md5Hash(const string&)’:
/home/tpp/Downloads/libQtShadowsocks-2.1.0/lib/crypto/cipher.cpp:195:83: error: invalid cast from type ‘std::vector<unsigned char, Botan::secure_allocator<unsigned char> >::iterator {aka __gnu_cxx::__normal_iterator<unsigned char*, std::vector<unsigned char, Botan::secure_allocator<unsigned char> > >}’ to type ‘const char*’
     return std::string(reinterpret_cast<const char*>(DataOfSecureByteArray(result)), result.size());

**Seems like my gcc compiler considers this cast as invalid:**
>  ‘std::vector<unsigned char, Botan::secure_allocator<unsigned char> >::iterator {aka __gnu_cxx::__normal_iterator<unsigned char*, std::vector<unsigned char, Botan::secure_allocator<unsigned char> > >}’ to type ‘const char*’

Can someone help me?
